bootstrap login + inscription

--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -21,8 +21,8 @@
                         Authentification
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="connexion">Connexion</a></li>
-                        <li><a class="dropdown-item" href="inscription">Inscription</a></li>
+                        <li><a class="dropdown-item" href="login">Connexion</a></li>
+                        <li><a class="dropdown-item" href="addUser">Inscription</a></li>
                     </ul>
                 </li>
             </ul>
