--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -1,4 +1,3 @@
-<!-- header.html -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
         <a class="navbar-brand" href="/accueil">Gestion de match de football</a>
@@ -11,22 +10,30 @@
                     <a class="nav-link" href="/accueil">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">À propos</a>
+                    <a class="nav-link" href="equipes">Equipes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
-                <li class="nav-item dropdown">
+                <li class="nav-item dropdown" th:if="${session.pseudo != null}">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false" th:text="${session.pseudo}">
+                        <!-- Display username instead of 'Authentification' -->
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="logout">Logout</a></li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown" th:unless="${session.pseudo != null}">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                         Authentification
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="login">Connexion</a></li>
-                        <li><a class="dropdown-item" href="addUser">Inscription</a></li>
+                        <li><a class="dropdown-item" href="/login">Connexion</a></li>
+                        <li><a class="dropdown-item" href="/addUser">Inscription</a></li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
 </nav>
-
