--- a/src/main/resources/static/header.html
+++ b/src/main/resources/static/header.html
@@ -10,7 +10,7 @@
                     <a class="nav-link" href="/accueil">Accueil</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="equipes">Equipes</a>
+                    <a class="nav-link" href="/equipes">Equipes</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
